@@ -3,7 +3,7 @@ char *rcsid_gtk2_inventory_c =
 /*
     Crossfire client, a client program for the crossfire program.
 
-    Copyright (C) 2005 Mark Wedel & Crossfire Development Team
+    Copyright (C) 2005-2007 Mark Wedel & Crossfire Development Team
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -321,12 +321,14 @@ static void setup_list_columns(GtkWidget *treeview)
     column = gtk_tree_view_column_new_with_attributes ("Weight", renderer,
                                                       "text", LIST_WEIGHT,
                                                       NULL);
-    /* 50 is just a guess.  However, testing showed that with auto resize,
-     * the name column for some objects is very long, which causes weight
-     * column to be pushed off the right edge and not fully visible.  Given
-     * the choice, I'd rather have the name truncated.
+    /* At 50, the title was always truncated on some systems.  64 is the
+     * minimum on those systems for it to be possible to avoid truncation
+     * at all.  Truncating the title looks cheesy, especially since heavy
+     * items (100+) need the width of the field anyway.  If weight pushed
+     * off the edge is a problem, it would be just better to let the user
+     * resize or find a way to allow rendering with a smaller font.
      */
-    gtk_tree_view_column_set_min_width(column, 50);
+    gtk_tree_view_column_set_min_width(column, 64);
     gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_FIXED);
 
     gtk_tree_view_column_set_sort_column_id(column, LIST_WEIGHT);
@@ -507,7 +509,7 @@ void set_weight_limit (uint32 wlim)
 
 /* returns the color to use for this object, based on
  * it being cursed and whatnot.  Right now, we only use
- * the background bolor, but decided to make this extensible
+ * the background color, but decided to make this extensible
  * to also cover the foreground (perhaps in the future).
  * perhaps also font information should be listed, so the
  * font could be made bold, italic, etc.
